// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots when all props and label/description with html should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            className="vd-checkbox-input"
            id="id"
            type="checkbox"
            value="value"
          />
          <div
            className="vd-checkbox-tick"
          />
          <div
            className="vd-label-only-checkbox-label"
          >
            <div>
              Label
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      className="vd-checkbox-description"
    >
      <div>
        Description
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when all props should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            className="vd-checkbox-input"
            id="id"
            type="checkbox"
            value="value"
          />
          <div
            className="vd-checkbox-tick"
          />
          <div
            className="vd-label-only-checkbox-label"
          >
            Label
          </div>
        </div>
      </label>
    </div>
    <div
      className="vd-checkbox-description"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when checked should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            checked={true}
            className="vd-checkbox-input"
            onChange={[Function]}
            type="checkbox"
          />
          <div
            className="vd-checkbox-tick"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when disabled should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            className="vd-checkbox-input"
            disabled={true}
            type="checkbox"
          />
          <div
            className="vd-checkbox-tick"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when empty props should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            className="vd-checkbox-input"
            type="checkbox"
          />
          <div
            className="vd-checkbox-tick"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when indeterminate should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            className="vd-checkbox-input"
            indeterminate={true}
            type="checkbox"
          />
          <div
            className="vd-checkbox-tick"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when not checked should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-label-only-checkbox vd-checkbox--primary"
  >
    <div
      className="vd-label-only-checkbox-container"
    >
      <label
        className="vd-label-only-checkbox-input-container vd-checkbox--unselected"
      >
        <div
          className="vd-checkbox-input-container"
        >
          <input
            checked={false}
            className="vd-checkbox-input"
            type="checkbox"
          />
          <div
            className="vd-checkbox-tick"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
